# Pac-Man

./: .coverage  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  käyttöohje.md  määrittelydokumentti  testaus.md  tuntikirjanpito  tuntikirjanpito.md  vaativuusmäärittely  vaativuusmäärittely.md
htmlcov/: _Users_anni-liisalaaksonen_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-oikea-qbGJewJW-py3_9_lib_python3_9_site-packages__pytest___init___py.html  _Users_anni-liisalaaksonen_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-oikea-qbGJewJW-py3_9_lib_python3_9_site-packages__pytest__argcomplete_py.html  _Users_anni-liisalaaksonen_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-oikea-qbGJewJW-py3_9_lib_python3_9_site-packages__pytest__code___init___py.html  _Users_anni-liisalaaksonen_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-oikea-qbGJewJW-py3_9_lib_python3_9_site-packages__pytest__code_code_py.html  _Users_anni-liisalaaksonen_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-oikea-qbGJewJW-py3_9_lib_python3_9_site-packages__pytest__code_source_py.html  _Users_anni-liisalaaksonen_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-oikea-qbGJewJW-py3_9_lib_python3_9_site-packages__pytest__io___init___py.html  _Users_anni-liisalaaksonen_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-oikea-qbGJewJW-py3_9_lib_python3_9_site-packages__pytest__io_saferepr_py.html  (+111 more)
laskarit/viikko1/: gitlog.txt  (+1 more)
src/: game.py  ghost.py  ghosts.py  main.py  pacman.py  peli.py  points.py  pyproject.toml  walls.py
(+111 files in other folders)
