[tool.poetry]
name = "ot-harjoitustyo_oikea"
version = "0.1.0"
description = ""
authors = ["Anni-Liisa <anniliisa.laaksonen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cowsay = "^3.0"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
